Add a root-path option, badly

--- a/templates/view.html
+++ b/templates/view.html
@@ -11,7 +11,7 @@
     <div class="column col-3">
       <div class="dropdown">
         <div class="btn-group">
-          <a class="btn btn-sm btn-primary" href="/edit/{{.Title}}">
+          <a class="btn btn-sm btn-primary" href="{{.Root}}/edit/{{.Title}}">
             <i class="icon icon-edit"></i>
             Edit
           </a>
