--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/css/spectre-icons.min.css">
-    <link rel="stylesheet" href="/css/spectre.min.css">
+    <link rel="stylesheet" href="{{.Root}}/css/spectre-icons.min.css">
+    <link rel="stylesheet" href="{{.Root}}/css/spectre.min.css">
     {{ template "stylesheets" . }}
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {{ template "css" . }}
@@ -13,13 +13,7 @@
   <section class="container grid-960 mt-10">
     <header class="navbar">
       <section class="navbar-section">
-        <a href="/" class="navbar-brand mr-10">{{.Brand}}</a>
-      </section>
-      <section class="navbar-section">
-        <div class="input-group input-inline">
-          <input class="form-input" type="text" placeholder="search" />
-          <button class="btn btn-primary input-group-btn">Search</button>
-        </div>
+        <a href="{{.Root}}/" class="navbar-brand mr-10">{{.Brand}}</a>
       </section>
     </header>
     {{template "content" .}}
