--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,18 +1,18 @@
 {{define "stylesheets"}}
-<link rel="stylesheet" href="/css/easymde.min.css">
+<link rel="stylesheet" href="{{.Root}}/css/easymde.min.css">
 {{end}}
 {{define "content"}}
 <section class="container">
   <div class="columns">
     <div class="column">
-      <form action="/save/{{.Title}}" method="POST">
+      <form action="{{.Root}}/save/{{.Title}}" method="POST">
         <div class="form-group">
           <label class="form-label" for="input-body">Editing: {{.Title}}</label>
           <textarea class="form-input" id="input-body" name="body" placeholder="Enter content here..." cols="80" rows="24">{{printf "%s" .Body}}</textarea>
         </div>
         <div class="form-group">
           <button class="btn btn-sm btn-primary" type="submit">Save</button>
-          <a class="btn btn-sm btn-link" href="/view/{{.Title}}">Cancel</a>
+          <a class="btn btn-sm btn-link" href="{{.Root}}/view/{{.Title}}">Cancel</a>
         </div>
       </form>
     </div>
@@ -20,8 +20,8 @@
 </section>
 {{end}}
 {{define "scripts"}}
-<script src="/js/jquery.slim.min.js"></script>
-<script src="/js/easymde.min.js"></script>
+<script src="{{.Root}}/js/jquery.slim.min.js"></script>
+<script src="{{.Root}}/js/easymde.min.js"></script>
 <script>
 $(document).ready(function() {
   var simplemde = new EasyMDE({
